# MRI-project-for-BME1309.01

./: .gitignore  00000020.dcm  CODE_FILE_GUIDE.md  README.md  comparison_guide.md  environment.yml  forward_sim.py  main.py  main_cmrf.py  main_new.py  phantom_prep.py  pipeline_config.py  pyproject.toml  traj_generator.py  utils.py  validate_results.py  报告.tex
scripts/: build_dictionary.py  compare_accuracy.py  extract_cmrf_data.py  generate_reference_maps_mrpro.py  generate_traj.py  prepare_dicom_phantom.py  prepare_phantom.py  run_forward_sim.py  run_recon.py  run_recon_cmrf.py  template_matching.py  tips.txt
src/member A/: __init__.py
src/mri_project/: __init__.py  array_backend.py
src/mri_project/dictionary/: __init__.py  epg.py
src/mri_project/forward/: __init__.py  io.py  phantom.py  simulation.py  trajectory.py
src/mri_project/quantification/: __init__.py  template_matching.py
src/mri_project/recon/: __init__.py  iterative.py  nufft_ops.py  regularization.py  sensitivity.py  subspace_ops.py
tests/: test_array_backend.py  test_dicom_phantom.py  test_iterative_recon.py  test_nufft_ops.py  test_regularization.py  test_sensitivity.py  test_smoke.py  test_subspace_ops.py  test_template_matching.py
