[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-project-bme1309"
version = "0.1.0"
description = "MRF forward simulation, dictionary generation, and reconstruction utilities for BME1309.01."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "sigpy",
    # --- 新增的 CMRF 脚本依赖 ---
    "torch",
    "einops",
    "mrpro",
]

[project.optional-dependencies]
test = ["pytest"]
gpu = [
    "sigpy",
    "cupy-cuda12x", 
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]